# tic-tac-toe

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs
common/src/entities/: system.rs
common/src/settings/: cert.rs  mod.rs  web.rs
core/: Cargo.toml
core/src/: lib.rs
web/: .env.example  Dockerfile
web/src/: app.html
web/src/lib/: Board.svelte
web/src/routes/: +page.svelte  Board.svelte
websocket/: Cargo.toml  Dockerfile
websocket/src/: main.rs
websocket/src/commands/: game.rs  mod.rs  rooms.rs  users.rs
websocket/src/events/: command.rs  mod.rs
websocket/src/json/: mod.rs
websocket/src/server/: handshake.rs  mod.rs  request.rs  room.rs  session.rs
