[package]
name = "websocket"
version = "0.1.0"
edition.workspace = true

[dependencies]
common = { path = "../common" }
core = { path = "../core" }

tokio = { workspace = true, features = ["sync", "net", "time"] }
env_logger = { workspace = true }
serde = { workspace = true }
log = { workspace = true }

serde_json = { version = "1.0.117" }
web-socket = { version = "0.7.0" }
base64 = { version = "0.22.1" }
sha1 = { version = "0.10.1" }